Format code using google format, update trans